[project]
name = "substrate-interface-async"
version = "1.7.10"
description = "Library for interfacing with a Substrate node (async fork)"

authors = [
    { name = "Stichting Polkascan (Polkascan Foundation)", email = "info@polkascan.org" }
]
maintainers = [
    { name = "Lev Gorodetskii", email = "github@drsr.io" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
keywords = ["interface", "polkascan", "polkadot", "substrate", "blockchain", "rpc", "kusama"]
readme = "README.md"
requires-python = ">=3.9,<4"

# install_requires=[
#     'websocket-client>=0.57.0,<2',
#     'base58>=1.0.3,<3',
#     'certifi>=2019.3.9',
#     'idna>=2.1.0,<4',
#     'xxhash>=1.3.0,<4',
#     'ecdsa>=0.17.0,<1',
#     'eth-keys>=0.2.1,<1',
#     'eth_utils>=1.3.0,<6',
#     'pycryptodome>=3.11.0,<4',
#     'PyNaCl>=1.0.1,<2',
#     'scalecodec>=1.2.10,<1.3',
#     'py-sr25519-bindings>=0.2.0,<1',
#     'py-ed25519-zebra-bindings>=1.0,<2',
#     'py-bip39-bindings>=0.1.9,<1'
# ],
dependencies = [
    "aiohttp>=3.11.6",
    "scalecodec>=1.2.11",
    "websocket-client>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/didup-io/py-substrate-interface-async"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.5.45",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]
full = [
    "base58>=2.1.1",
    "certifi>=2024.8.30",
    "ecdsa>=0.19.0",
    "eth-keys>=0.6.0",
    "eth-utils>=5.1.0",
    "full>=0.0.3.1",
    "idna>=3.10",
    "pycryptodome>=3.21.0",
    "pynacl>=1.5.0",
    "xxhash>=3.5.0",
]
