[project]
name = "substrate-interface-async"
version = "1.7.10"
description = "Library for interfacing with a Substrate node (async fork)"

authors = [
    { name = "Stichting Polkascan (Polkascan Foundation)", email = "info@polkascan.org" }
]
maintainers = [
    { name = "Lev Gorodetskii", email = "github@drsr.io" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
keywords = ["interface", "polkascan", "polkadot", "substrate", "blockchain", "rpc", "kusama"]
readme = "README.md"
requires-python = ">=3.9,<4"

dependencies = [
    "aiohttp>=3.11.6",
    "scalecodec>=1.2.11",
    "websocket-client>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/didup-io/py-substrate-interface-async"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.5.45",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pytest-coverage>=0.0",
]
full = [
    "base58>=2.1.1",
    "certifi>=2024.8.30",
    "ecdsa>=0.19.0",
    "eth-keys>=0.6.0",
    "eth-utils>=5.1.0",
    "full>=0.0.3.1",
    "idna>=3.10",
    "pycryptodome>=3.21.0",
    "pynacl>=1.5.0",
    "xxhash>=3.5.0",
]

[tool.pytest.ini_options]
addopts="--cov-report=term-missing --cov=dipdup --cov-report=xml -s -v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli_level = "WARNING"
