[project]
name = "substrate-interface-async"
version = "1.7.10"
description = "Library for interfacing with a Substrate node (async fork)"

authors = [
    { name = "Stichting Polkascan (Polkascan Foundation)", email = "info@polkascan.org" }
]
maintainers = [
    { name = "Lev Gorodetskii", email = "github@drsr.io" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
keywords = ["interface", "polkascan", "polkadot", "substrate", "blockchain", "rpc", "kusama"]
readme = "README.md"
requires-python = ">=3.9,<4"

dependencies = [
    "aiohttp>=3.11.6",
    "scalecodec>=1.2.11",
    "xxhash>=3.5.0",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
full = [
    "base58>=2.1.1",
    "bip39>=0.0.2",
    "certifi>=2024.8.30",
    "ecdsa>=0.19.0",
    "eth-keys>=0.6.0",
    "eth-utils>=5.1.0",
    "idna>=3.10",
    "py-ed25519-zebra-bindings>=1.1.0",
    "py-sr25519-bindings>=0.2.1",
    "pycryptodome>=3.21.0",
    "pynacl>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/didup-io/py-substrate-interface-async"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.5.45",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pytest-coverage>=0.0",
]

# [tool.black]
# line-length = 120
# target-version = ["py312"]
# skip-string-normalization = true

# [tool.ruff]
# line-length = 120
# target-version = "py312"

# [tool.ruff.lint]
# # ignore = [
# #     "E402",   # module level import not at top of file
# #     "E501",   # line too long
# # ]
# # extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP"]
# extend-select = ["I", "Q"]
# flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
# isort = { force-single-line = true, known-first-party = ["dipdup"] }

# [tool.mypy]
# python_version = "3.12"
# strict = false

[tool.pytest.ini_options]
addopts="--cov-report=term-missing --cov=dipdup --cov-report=xml -s -v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli_level = "WARNING"
